# libbvp

./: .gitmodules  CMakeLists.txt  README.md
include/: fpgm.h  fpgm_collocation.h  geo.h  obvp.h
mathlib/math/: Functions.hpp
matlab/: main.m  test.m
scripts/: bifilar_pendulum_moi.py
src/: bvp_test.cpp  geo.cpp  landing_eigen_test.cpp  landing_test.cpp  opt_landing.cpp  parameters.yaml
